# CG

./: .gitignore  .gitmodules  CMakeLists.txt  TC-mingw.cmake  build.sh  build_mingw.sh  debug.sh  generate_all.bat  generate_all.sh
custom_test_files_phase_1/: solar_system.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_1_6.xml  test_1_7.xml  test_1_8.xml  test_1_9.xml  test_4_1.xml  test_4_2.xml
custom_test_files_phase_3/: comet.patch  comet_tail.patch  test_3_1.xml  test_3_2.xml  test_3_3.xml
custom_test_files_phase_4/: solar_system.xml  test_4_1.xml  test_box.xml  test_cone.xml  test_cylinder.xml  test_plane.xml  test_sphere.xml  test_torus.xml
includes/Engine/: BasicRenderer.h  Camera.h  Engine.h  Engine_Object.h  GLErrors.h  InputHandler.h  Lights.h  Renderer.h  RendererObjectInfo.h  Rotate.h  Scale.h  Shader.h  TextureArray.h  Transformation.h  Translate.h  XmlParser.h  common.h
includes/TinyXML2/: tinyxml2.h
includes/common/: Consts.h  Material.h  Vertex.h
includes/generator/: Box.h  Cone.h  Cylinder.h  Patch.h  Plane.h  Point.h  Sphere.h  Torus.h  Vertex.h
shaders/: basic.frag  basic.vert  blur.frag  explode.gs  hdr.frag  hdrBloomMerge.frag  lighting.frag  lighting.vert  lighting_extract_brightness.frag  lighting_extract_brightness.vert  lighting_extract_brightness_with_gs.frag  lighting_extract_brightness_with_gs.vert  normals.frag  normals.gs  normals.vert  sun.frag  sun.gs  sun.vert  texture.frag  texture.vert
src/: Engine.cpp  Generator.cpp  engine.cpp
src/Engine/: BasicRenderer.cpp  Engine.cpp  Engine_Object.cpp  GLErrors.cpp  InputHandler.cpp  Renderer.cpp  Shader.cpp  TextureArray.cpp  Transformation.cpp  XmlParser.cpp  common.cpp
src/TinyXML2/: tinyxml2.cpp
src/common/: Consts.cpp  Vertex.cpp
src/generator/: Box.cpp  Cone.cpp  Cylinder.cpp  Generator.cpp  Patch.cpp  Plane.cpp  Sphere.cpp  Torus.cpp  donute.cpp
test_files_phase_1/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
test_files_phase_2/: test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml
test_files_phase_3/: test_3_1.xml  test_3_2.xml
test_files_phase_4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
